# sateri-project

./: .gitignore  LICENSE  dialogue.tab  errors.txt  log.txt  traceback.txt
NOTES/: Freud.md  Kant.md  Psychology.md
Sateri/: README.md  log.txt
Sateri-demo/: package.json  pnpm-lock.yaml
Sateri-demo/src/: App.vue
Sateri-demo/src-tauri/: Cargo.toml  tauri.conf.json
Sateri-demo/src-tauri/src/: main.rs
Sateri-demo/src/router/: index.ts
Sateri-demo/src/utils/: checkPassword.ts  coinFlip.ts  timeUtils.ts
Sateri-demo/src/views/: C.vue  Disk.vue  Home.vue  Instruction.vue  Password.vue  Puzzle.vue
Sateri/game/: gui.rpy  gui.rpyc  options.rpyc  screens.rpy.1.bak  screens.rpyc  script.rpy  script.rpyc
Sateri/game/cache/: bytecode-39.rpyb  py3analysis.rpyb  screens.rpyb  shaders.txt
Sateri/game/saves/: _reload-2-LT1.save  auto-1-LT1.save  auto-10-LT1.save  auto-2-LT1.save  auto-3-LT1.save  auto-4-LT1.save  auto-5-LT1.save  auto-6-LT1.save  auto-7-LT1.save  auto-8-LT1.save  auto-9-LT1.save  navigation.json  persistent
Sateri/game/tl/None/: common.rpym  common.rpymc
Sateri/game/tl/english/: common.rpy  common.rpyc  options.rpy  options.rpyc  screens.rpy  screens.rpyc  script.rpy  script.rpyc
game/: gui.rpyc  options.rpy  options.rpyc  screens.rpyc  script.rpy  script.rpyc
